--- a/MockUp/mockUpcss.css
+++ b/MockUp/mockUpcss.css
@@ -35,9 +35,9 @@ div.solarSystem img{
 	padding-right: 1%;
 	padding-left: 1%;
 	
-	max-width: 50%;
-	height: auto;
-	width: auto\9;
+	
+	height: 540px;
+	width: 960px;
 }
 
 a:link {
