--- a/HCIMockUp/HCIMockUpTickets.css
+++ b/HCIMockUp/HCIMockUpTickets.css
@@ -5,5 +5,17 @@ body{
   width: 800px;
   margin: 0 auto;
 }
-  
+div.consolButton{
+	width: 100px;
+	height: 100px;
+	border-radius: 50%;
+	text-Align: center;
+	line-height: 100px;
+	background-color: DimGray;
+}
+p.audio {
+    color: white;
+    font-size: 40px;
+    font-family: Impact, Monospace;
+  }
 
