--- a/HCIMockUp/mockUpcss.css
+++ b/HCIMockUp/mockUpcss.css
@@ -24,6 +24,7 @@ div.Welcome {
 	width: 200px;
 	padding: 25px;
 	border: 25px darkSlateGray;
+	border-radius: 50%;
 }
 div.choices {
 	width: 200px;
@@ -31,14 +32,17 @@ div.choices {
 	border: 25px darkSlateGray;
 }
 div.solarSystem img{
-	padding-bottom: .1%;
-	padding-top: .1%;
-	padding-right: 1%;
-	padding-left: 1%;
-	
-	
 	height: 540px;
 	width: 960px;
+}
+div.consolButton{
+	width: 100px;
+	height: 100px;
+	border-radius: 50%;
+	text-Align: center;
+	line-height: 100px;
+	background-color: DimGray;
+	
 }
 
 a:link {
