--- a/MockUp/HCIMockUpTickets.css
+++ b/MockUp/HCIMockUpTickets.css
@@ -9,5 +9,13 @@ body{
 audio { 
    display:none;
 }
+div.consolButton{
+	width: 100px;
+	height: 100px;
+	border-radius: 50%;
+	text-Align: center;
+	line-height: 100px;
+	background-color: DimGray;	
+}
   
 
