--- a/MockUp/mockUpcss.css
+++ b/MockUp/mockUpcss.css
@@ -1,8 +1,9 @@
 /*external style sheet*/
 
 h1 {
-	font: impact;
 	color: red;
+    font-size: 80px;
+    font-family: Impact, Monospace;
 }
 title {
 	font: impact;
@@ -10,34 +11,37 @@ title {
 }
 body {
 	background-color: black;
-	
-	
 }
+
 p {
-	font: impact;
-	color: white;
+    color: white;
+    font-size: 40px;
+    font-family: Impact, Monospace;
 }
+
 div.Welcome {
 	background-color: navy;
 	width: 200px;
 	padding: 25px;
 	border: 25px darkSlateGray;
+	border-radius: 50%;
 }
 div.choices {
-	background-color: navy;
 	width: 200px;
 	padding: 25px;
 	border: 25px darkSlateGray;
 }
 div.solarSystem img{
-	padding-bottom: .1%;
-	padding-top: .1%;
-	padding-right: 1%;
-	padding-left: 1%;
-	
-	
 	height: 540px;
 	width: 960px;
+}
+div.consolButton{
+	width: 100px;
+	height: 100px;
+	border-radius: 50%;
+	text-Align: center;
+	line-height: 100px;
+	background-color: DimGray;	
 }
 
 a:link {
@@ -50,3 +54,8 @@ a:visited {
 a:hovor {
 	color: darkred;
 }
+ h2 {
+    color: red;
+    font-size: 80px;
+    font-family: Impact, Monospace;
+  }
